Networks list skeleton added

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -36,6 +36,18 @@ body {
       max-width: 1024px;
       margin: auto;
       padding: 10px;
+
+      .about {
+
+      }
+
+      .home {
+
+      }
+
+      .network {
+
+      }
     }
   }
 }
