--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -38,7 +38,9 @@ body {
       padding: 10px;
 
       .about {
-
+        p {
+          text-align: justify;
+        }
       }
 
       .home {
@@ -46,10 +48,6 @@ body {
       }
 
       .networks-dictionary {
-        h1 {
-          font-weight: bold;
-        }
-
         .networks-description-box {
           border: darkviolet solid 3px;
           border-radius: 10px;
