--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -103,5 +103,19 @@ body {
         }
       }
     }
+
+    #footer-nav {
+      font-size: 28px;
+      padding: 10px 0 20px;
+
+      a {
+        font-weight: bold;
+        color: $color-link;
+
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
   }
 }
